--- a/Matchismo2/MainStoryboard.storyboard
+++ b/Matchismo2/MainStoryboard.storyboard
@@ -82,6 +82,7 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="2" id="sE9-z6-KJ3"/>
+                                    <outlet property="delegate" destination="2" id="Sxl-Ac-tMI"/>
                                     <outletCollection property="gestureRecognizers" destination="Jw4-n4-JXX" appends="YES" id="nhg-5r-CKb"/>
                                 </connections>
                             </collectionView>
@@ -202,6 +203,7 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="brf-r5-Rh2" id="Zd1-vB-ULD"/>
+                                    <outlet property="delegate" destination="brf-r5-Rh2" id="C1J-WB-Pyc"/>
                                     <outletCollection property="gestureRecognizers" destination="R01-Tk-Rca" appends="YES" id="lly-P5-gTU"/>
                                 </connections>
                             </collectionView>
@@ -265,6 +267,8 @@
         <class className="CardGameViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CardGameViewController.h"/>
             <relationships>
+                <relationship kind="action" name="deal:" candidateClass="UIButton"/>
+                <relationship kind="action" name="flipCard:" candidateClass="UITapGestureRecognizer"/>
                 <relationship kind="outlet" name="cardCollectionView" candidateClass="UICollectionView"/>
                 <relationship kind="outlet" name="flipResultLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="flipsLabel" candidateClass="UILabel"/>
@@ -306,6 +310,9 @@
         </class>
         <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
